// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/pages/JurisdictionAssignment/JurisdictionCell renders correctly by default: should have classNames link 1`] = `
<NodeCell
  baseUrl="/example"
  node={
    Object {
      "children": Object {
        "length": 1,
      },
      "hasChildren": [Function],
      "model": Object {
        "label": "Gaz",
      },
    }
  }
>
  <Link
    key="undefined-span"
    to="/example/undefined"
  >
    <LinkAnchor
      href="/example/undefined"
      navigate={[Function]}
    >
      <a
        href="/example/undefined"
        onClick={[Function]}
      >
        Gaz
      </a>
    </LinkAnchor>
  </Link>
</NodeCell>
`;

exports[`src/pages/JurisdictionAssignment/JurisdictionCell renders correctly when node does not have children: should have classNames link 1`] = `
<NodeCell
  baseUrl="/example"
  node={
    Object {
      "children": Object {
        "length": 0,
      },
      "hasChildren": [Function],
      "model": Object {
        "label": "Gaz",
      },
    }
  }
>
  <span
    key="undefined-span"
  >
    Gaz
  </span>
</NodeCell>
`;
